# FastStart

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  alembic.ini  config.py  main.py  pyproject-poetry.toml  pyproject.toml  uv.pyproject.toml
alembic/: env.py
alembic/versions/: 3bff99511b02_initial_tables.py  6cdd2baa447f_initial_tables.py  ee7dd7fef829_initial_tables.py
app/: server.py
app/api/: route.py  routes.py  user.py
app/api/dev/: dev_route.py
app/api/v1/: v1_route.py
app/assets/: logger_view.html
app/core/: database.py  exception_handler.py  log_handler.py  logger.py
app/db/: database.py  prisma_client.py  user_db.py
app/errors/: error.py  error_docs.py  openapi_error.py
app/job/: cron_job.py
app/middleware/: handler.py  middleware_handler.py  usage.py
app/middlewares/: exception.py  middleware.py
app/models/: db_models.py  model.txt  user.py
app/res/: error.py  error_doc.py  exception_handler.py  exception_handlers.py  openapi_error.py
app/response/: error.py
app/routes/: route.py
app/routes/dev/: dev_route.py
app/routes/v1/: v1_route.py
app/schema/: base_schema.py  user.py  user_schema.py
app/schemas/: base.py  user.py  user_schema.py
app/service/: log_viewer_service.py
app/services/: log_viewer_service.py  user_db.py
app/template/: logger_view.html
app/templates/: log_viewer.html  logger_view.html
app/utils/: custom_log.py  helpers.py  log_handler.py  logger.py  response_docs.py
legacy/: logger.py
logger/: log_handler.py
prisma/: partial_types.py  schema.prisma
prisma-orm/: .gitignore  pyproject.toml
prisma-orm/app/errors/: openapi_errors.py
prisma-orm/app/jobs/: cron_job.py
prisma-orm/app/schemas/: user.py
prisma-orm/app/services/: log_viewer_service.py
prisma-orm/db/: db.txt
prisma-orm/docs/: docs.txt
prisma/migrations/20240820201213_init/: migration.sql
test/: test.txt
(+8 files in other folders)
