[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[project]
name = "fastapi-sqlalchemy"
version = "1.0.0"
description = "Base file structure of fast api"
license = "MIT"
authors = [
    {name = "umar-anzar", email = "omer.anzar2@gmail.com"}
]
readme = "README.md"


requires-python = ">=3.11,<3.12"
dependencies = [
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
]


[tool.poetry]
package-mode = false


[project.urls]
Repository = "https://github.com/Hoopoes/FastStart"