[project]
name = "faststart-sqlalchemy"
version = "1.0.0"
description = "Base file structure of fastAPI"
license = "MIT"
authors = [
    {name = "umar-anzar", email = "omer.anzar2@gmail.com"}
]
readme = "README.md"


requires-python = ">=3.11,<3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.1",
    "gunicorn>=25.3.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]

[project.urls]
Repository = "https://github.com/Hoopoes/FastStart"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
